2009-02-14  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extHashtbl.ml: [Labels.label] created

	* src/core/extlib/extHashtbl.ml: [Labels.*] reimplemented from [Labels.label]

2009-02-13  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extHashtbl.mli: Documentation on section Traversing

	* src/core/extlib/extHashtbl.ml: flattened

	* src/core/extlib/pMap.ml*: [filter], [filteri], [filter_map] added

	* src/core/extlib/pMap.ml: flattened

	* src/core/extlib/extMap.ml: flattened

	* src/core/extlib/extMap.ml*: [filter], [filteri], [filter_map] added

	* src/core/extlib/extGc.mli: [control] restored

	* src/core/extlib/_tags: <*.mli> now uses [use_optcomp_o]

	* src/core/extlib/extUnix.mli: [inet_addr] made an alias, [sockaddr] made concrete, [socket_bool_option] made concrete

2009-02-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/_tags: [extlib.mli] now uses [use_optcomp_o]

2009-02-12  Jeremie Dimino  <jeremie@dimino.org>

	* build/optcomp/optcomp*.ml: created

	* myocamlbuild.ml: adapt the semantic of optcomp tags	

	* **/_tags: adapt optcomp tags to the new behaviour
	
2009-02-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/main/nothreads/batteries.ml: [Safe_float] added

	* src/main/threads/batteries.ml: [Safe_float] added

	* src/core/extlib/extFloat.ml*: [Safe_float] added

	* src/core/extlib/extFloat.ml: flattened

	* src/core/extlib/extFloat.ml: [Base_safe_float] added

	* src/core/extlib/number.ml*: [NaN] added

	* src/syntax/pa_openin/pa_openin.ml: "include" replaced with "with"

	* src/batteries_toolchain/ocamlbuild: now compiling [myocamlbuild.ml] using regular ocamlbuild

2009-02-11  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/batteries_config.ml*: [max_array_length], [word_size], [max_string_length] added

	* Makefile.in: [tests] now uses regular [ocamlbuild] for cleanup
	
	* build/fix_camlp4_print.ml: created
