@@ -1,3 +1,11 @@
+2009-02-14 Jeremie Dimino <jeremie@dimino.org>
+
+	* build/META.in: reload Camlp4Top.cmo after loading pa_estring in the toplevel
+
+	* src/syntax/pa_strings/pa_estring_top.ml: deleted
+
+	* src/batteries_toolchain/top.ml: remove loading of "pa_estring_top.cmo"
+
 2009-02-14  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
 	* src/core/extlib/extHashtbl.ml: [Labels.label] created
